[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mnemo-autogen"
version = "0.1.0"
description = "AutoGen v0.4+ FunctionTool wrappers for Mnemo Memory."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "getmnemo>=0.1.0,<1.0",
  "autogen-core>=0.4,<1.0",
]

[project.urls]
Homepage = "https://getmnemo.xyz"

[tool.hatch.build.targets.wheel]
packages = ["src/getmnemo_autogen"]
