[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ledgermem-crewai"
version = "0.1.0"
description = "CrewAI BaseTool wrappers for LedgerMem Memory."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "ledgermem>=0.1.0,<1.0",
  "crewai-tools>=0.20,<1.0",
]

[project.urls]
Homepage = "https://proofly.dev"

[tool.hatch.build.targets.wheel]
packages = ["src/ledgermem_crewai"]
