[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mnemo-crewai"
version = "0.1.0"
description = "CrewAI BaseTool wrappers for Mnemo Memory."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "getmnemo>=0.1.0,<1.0",
  "crewai-tools>=0.20,<1.0",
]

[project.urls]
Homepage = "https://getmnemo.xyz"

[tool.hatch.build.targets.wheel]
packages = ["src/getmnemo_crewai"]
