[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ledgermem-pydantic-ai"
version = "0.1.0"
description = "Pydantic AI Tool wrappers for LedgerMem Memory."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "ledgermem>=0.1.0,<1.0",
  "pydantic-ai>=0.0.13,<1.0",
]

[project.urls]
Homepage = "https://proofly.dev"

[tool.hatch.build.targets.wheel]
packages = ["src/ledgermem_pydantic_ai"]
