[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mnemo-pydantic-ai"
version = "0.1.0"
description = "Pydantic AI Tool wrappers for Mnemo Memory."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "getmnemo>=0.1.0,<1.0",
  "pydantic-ai>=0.0.13,<1.0",
]

[project.urls]
Homepage = "https://getmnemo.xyz"

[tool.hatch.build.targets.wheel]
packages = ["src/getmnemo_pydantic_ai"]
