[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llama-index-vector-stores-getmnemo"
version = "0.1.0"
description = "LlamaIndex vector store / retriever backed by Mnemo Memory."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Mnemo", email = "founders@getmnemo.xyz" }]
keywords = ["llama-index", "getmnemo", "memory", "vector-store", "rag"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "getmnemo>=0.1.0,<1.0",
  "llama-index-core>=0.11,<1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.urls]
Homepage = "https://getmnemo.xyz"
Repository = "https://github.com/getmnemo/getmnemo-integrations"

[tool.hatch.build.targets.wheel]
packages = ["src/llama_index"]
